# VotingDapp_GJ

./: Anchor.toml  CLIENT_GUIDE.md  COMPLETE_SUMMARY.md  client-demo.ts  client.js  package.json
app/: README.md  package-lock.json  package.json  tsconfig.json
app/src/: client.ts  demo.ts  examples-phase5.ts  index.ts  program.ts  test-client.ts  test-phase5.ts  transactions.ts  types.ts
app/src/components/: VotingApp.tsx.example
app/src/idl/: voting_dapp.json
cli/: Cargo.toml  README.md
cli/src/: client.rs  main.rs  utils.rs
programs/voting-dapp/: Cargo.toml
programs/voting-dapp/src/: lib.rs
tests/: voting-dapp.ts
voting-frontend/: README.md  package-lock.json  package.json
voting-frontend/public/: index.html
voting-frontend/src/: index.ts
voting-frontend/src/lib/: voting-service.ts
