[package]
name = "voting-dapp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
solana-sdk = "1.18"
solana-client = "1.18"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
shellexpand = "3.1"
borsh = "0.10"

[[bin]]
name = "voting-cli"
path = "src/main.rs"
